Stopped scrollbar appearing over tools on dashboard widget

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -598,6 +598,7 @@ div:hover > .hover-expand {
 
 .tool-icon-box {
   align-content: center;
+  margin: 0;
 }
 
 .render-failure {
