--- a/src/stylesheets/vortex/starter.scss
+++ b/src/stylesheets/vortex/starter.scss
@@ -116,7 +116,6 @@
   overflow-y: auto;
   justify-content: flex-start;
   align-items: center;
-  margin: 0 10px 0 0;
   align-content: center;
   > * {
     flex: 0 1 30%;
